--- a/styleevalvictor.css
+++ b/styleevalvictor.css
@@ -1,19 +1,20 @@
+*{
+    margin : 0;
+    padding : 0;
+}
+
 body{
-    margin: 0;
-    background-color: white;
-    
+    background-image: url(img/lighthouse2.jpg);
+    background-color: white;    
     background-repeat: no-repeat;
     background-size: cover;
+    height: 700px;
     
     
 }
 header{
-    background-image: url(img/lighthouse2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;    
-    width: 100%;
-    
+    height: 800px;
+   
     
 }
 nav{
@@ -52,14 +53,13 @@ nav{
 main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     height: auto;
 }
 
 .text{
-    display: flex;
-    justify-content:center;
-    align-items: center;
+    
+    text-align: center;
     row-gap: 10px;
     
       
@@ -71,7 +71,7 @@ main{
 .buttonsbar{
     display: flex;
     justify-content: center;
-    
+    margin-top: 1%;
     grid-row: 2;
     grid-column: 1/4;
        
@@ -146,59 +146,55 @@ main{
     height:120px
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {  
+ 
     
+
     .cases{
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 1fr ;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        margin-left: 29%;
-        margin-right: 29%;
-        column-gap: 8px;
-        row-gap:  8px;
+        display: block;        
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;   
+        
         color: aliceblue;
     }
     #insurance{
         grid-row: 1;
-        grid-column: 100%;
+        width: 100%;        
         background-color: aquamarine;
     
     }
     #equities{
         grid-row: 2;
-        grid-column: 100%;
+        width: 100%;
         background-color: rgb(133, 130, 119);
     }
     #angels{
         grid-row: 3;
-        grid-column: 100%;
+        width: 100%;
         background-color: deepskyblue;
     
     }
     #investment{
         grid-row: 4;
-        grid-column: 100%;
+        width: 100%;
         background-color: rgb(255, 196, 107);
     }
     #superpower{
         grid-row: 5;
-        grid-column: 100%;
+        width: 100%;
         background-color: rgb(214, 137, 160);
     }
     #account{
         grid-row: 6;
-        grid-column: 100%;
+        width: 100%;
         background-color: rgb(136, 155, 136);
     }
     #estate{
         grid-row: 7;
-        grid-column: 100%;
+        width: 100%;
         background-color: grey;
     }
-    .button3{
-        
-    }
+    
 
     
 }
